# xsimdmacinteltest

./: CMakeLists.txt  HelloWorld.cpp  Test.h
.github/workflows/: test.yml
